# webtau

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.sh  package-lock.json  package.json  svelte.config.js  vite.config.ts
.cargo/: config.toml
.github/workflows/: deploy.yml
crates/rust-world/: Cargo.toml
crates/rust-world/rsworld/: Cargo.toml
crates/rust-world/rsworld-sys/: Cargo.toml  build.rs
crates/rust-world/rsworld-sys/src/: lib.rs
crates/rust-world/rsworld/src/: lib.rs
crates/rust-world/src/: lib.rs
crates/w-synth/: Cargo.toml
crates/w-synth/src/: consts.rs  filter.rs  lib.rs  oto.rs  parser.rs  resample.rs  util.rs
crates/w-synth/src/audio/: post_process.rs  read_write.rs
crates/w-synth/src/interpolator/: interp.rs
crates/w-synth/src/world/: features.rs  synthesis.rs
src/: app.css
src/lib/: .gitignore  stores.ts  synthesis.worker.ts  types.ts  wav-analyzer.worker.ts  wsynth-client.svelte.ts
src/lib/components/: ControlsPanel.svelte  NoteEditor.svelte  PianoRoll.svelte  SettingsModal.svelte  StatusBar.svelte  VoicebankLoader.svelte
src/lib/utils/: constants.ts  midi.ts
src/routes/: +page.svelte
